--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter_gen_runner: ^5.5.0+1
   responsive_builder: ^0.7.0
   get_it: ^7.7.0
+  smooth_page_indicator: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +43,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
