--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/cart-images/
     - assets/profile/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
