--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   get_it: ^7.7.0
   smooth_page_indicator: ^1.0.0
   flutter_screenutil: ^5.9.3
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
