--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,22 @@ dependencies:
   smooth_page_indicator: ^1.0.0
   flutter_screenutil: ^5.9.3
   http: ^1.2.2
+  flutter_svg: ^2.0.10+1
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+
+flutter_native_splash:
+  color: "#ffffff"  # Background color of the splash screen
+  image: assets/images/splash_screen2.png  # Path to your splash screen image (adjust path accordingly)
+  android: true
+  ios: true
+  fullscreen: true  # Optional: fullscreen splash
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,6 +58,7 @@ flutter:
     - assets/images/
     - assets/images/cart-images/
     - assets/profile/
+    - assets/svg_images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
